--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\KRPTN\\Anaconda3\\envs\\aidjv2\\python.exe"
+    "python.pythonPath": "/home/kripton/anaconda3/envs/aidj/bin/python",
+    "python.dataScience.jupyterServerURI": "local"
 }
