--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/home/kripton/anaconda3/envs/aidj/bin/python",
+    "python.pythonPath": "C:\\Users\\KRPTN\\Anaconda3\\envs\\aidjv2\\python.exe",
     "jupyter.jupyterServerType": "local"
 }
